<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_custom_calendar"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="#CCC5C5"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/icons8_back_40px"
            android:id="@+id/prevBtn"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/display_current_date"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/november_2019"
            android:textSize="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icons8_forward_40px"
            android:id="@+id/nextBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Sunday"
            android:textStyle="bold"
            android:text="@string/sunday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Monday"
            android:textStyle="bold"
            android:text="@string/monday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tuesday"
            android:textStyle="bold"
            android:text="@string/tuesday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Wednesday"
            android:textStyle="bold"
            android:text="@string/wednesday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Thursday"
            android:textStyle="bold"
            android:text="@string/Thursday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Friday"
            android:textStyle="bold"
            android:text="@string/friday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Saturday"
            android:textStyle="bold"
            android:text="@string/saturday"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <GridView
        android:id="@+id/calendar_grid"
        android:numColumns="7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>