<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#754747"
    tools:context=".Setting.CofirmPassActivity">
    <ImageButton
        android:layout_margin="10dp"
        android:id="@+id/reply"
        android:background="@null"
        android:src="@drawable/ic_reply_black_36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_logo_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/thay_doi_mat_khau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nhappasscu"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/nhap_mat_khau_cu"
        android:textStyle="bold"
        android:background="#fff"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/matkhau"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/nhap_mat_khau_moi"
        android:textStyle="bold"
        android:background="#fff"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nhaplai"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/nhap_de_xac_nhan_lai_mat_khau"
        android:textStyle="bold"
        android:background="#fff"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/taomatkhau"
        android:text="@string/dang_nhap"
        android:textColor="#F0B9B9"
        android:background="@drawable/bg_view"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>