<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="#754747"
    android:layout_width="400dp"
    android:layout_height="600dp">
    <ImageButton
        android:id="@+id/closeLock"
        android:layout_margin="5dp"
        android:layout_gravity="right"
        android:tint="@android:color/white"
        android:background="@null"
        android:src="@drawable/ic_close_36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lockscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/nhaplai"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:hint="@string/nhap_mat_khau_cu"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/nhapkhoa"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:hint="@string/nhap_mat_khau"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/nhapkhoa1"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:hint="@string/nhap_de_xac_nhan_lai_mat_khau"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="#545BA5"
        android:text="@string/thay_doi_mat_khau"
        android:textColor="@color/colorText" />
</LinearLayout>