<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:background="#CCC5C5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"
        android:textSize="18dp"
        android:text="@string/bancochacmuondong"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/co"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_dialog_yes"
            android:text="@string/co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/khong"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_dialog_no"
            android:layout_marginLeft="50dp"
            android:text="@string/khong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>




</LinearLayout>