<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/bancochacmuonxoachu"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:background="@null"
        android:src="@drawable/trash"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/co"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_dialog_yes"
            android:text="@string/co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/khong"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/bg_dialog_no"
            android:layout_marginLeft="50dp"
            android:text="@string/khong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>