<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#CCC5C5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/matkhau"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_lock_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/caidatmatkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ngonngu"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_format_size_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/caidatngongu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mausac"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_color_lens_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/caidatmausac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/size"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_color_lens_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/cai_dat_kich_thuoc_chu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/font"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_color_lens_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/Caidatphongchu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/khac"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_more_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/caidatkhac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gioithieu"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/ic_help_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/gioithieuveapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>