<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="380dp"
    android:layout_height="400dp">


    <ImageButton
        android:id="@+id/xxx"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:background="@null"
        android:tint="#000000"
        android:src="@drawable/ic_close_36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/happyicon"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:src="@drawable/happy"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/vuive"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="#E90D0D"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/bieucam1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/buonicon"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:src="@drawable/unhappy"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/buonba"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="#E90D0D"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/bieucam2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/congviecicon"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:src="@drawable/work"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/dilam"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="#E90D0D"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/bieucam3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/henicon"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:src="@drawable/event"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/dihenho"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="#E90D0D"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/bieucam4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>